--- a/.github/workflows/AzGovViz_OIDC.yml
+++ b/.github/workflows/AzGovViz_OIDC.yml
@@ -8,7 +8,7 @@ name: AzGovViz_OIDC
 
 env:
   OutputPath: wiki
-  ManagementGroupId: <Management Group Id> #provide the Management Group Id, not the displayName
+  ManagementGroupId: d90f50dc-67ba-4133-ab2b-8cfdb70263c4 #provide the Management Group Id, not the displayName
   ScriptDir: pwsh #example: 'my folder\pwsh' or 'my folder/pwsh'
   ScriptPrereqFile: prerequisites.ps1
   ScriptFile: AzGovVizParallel.ps1
